--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ main {
     z-index: -1;
 }
 
+.hamburger {
+    display: none;
+}
+
 header {
     width: 1160px;
     height: 40px;
@@ -58,6 +62,8 @@ header {
     background-color: transparent;
     border-radius: 5px;
     cursor: pointer;
+    display: none;
+
 }
 
 .nav-select {
@@ -67,7 +73,8 @@ header {
 .hero-section {
     display: flex;
     align-items: center;
-    width: 1160px;
+    /* width: 1160px; */
+    width: 72.5rem;
     height: 754px;
     margin: 0 auto;
     position: relative;
@@ -205,6 +212,7 @@ header {
     /* border: 1px solid red; */
     border-radius: 24px;
     overflow: hidden;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
 }
 
 .box-img {
@@ -243,6 +251,7 @@ header {
 
 .left-trip-section {
     width: 50%;
+    text-align: left;
     /* border: 1px solid red; */
 }
 
@@ -256,7 +265,7 @@ header {
 }
 
 .dotted-img {
-    margin-top: 100px;
+    margin-top: 30px;
 }
 
 .trip {
@@ -283,14 +292,14 @@ header {
 }
 
 .trip-sm-heading {
-    text-align: left;
+    /* text-align: left; */
     line-height: 27px;
     font-size: 17px;
     font-weight: 600;
 }
 
 .trip-big-heading {
-    text-align: left;
+    /* text-align: left; */
     line-height: 64.5px;
     font-size: 50px;
     font-weight: 700;
@@ -341,7 +350,7 @@ header {
     /* align-items: center; */
     width: 421px;
     margin: 74px 30px 78px 300px;
-    /* border: 1px solid; */
+    border: 1px solid;
     background-color: white;
     padding-left: 20px;
     border-radius: 10px;
@@ -479,3 +488,439 @@ input {
     margin-bottom: 12px;
 }
 
+/* Responsiveness for small mobile devices */
+@media screen and (max-width: 425px) {
+    body {
+        max-width: 420px;
+        margin: 0 auto;
+    }
+    main {
+        width: 100%;
+        /* border: 1px solid red; */
+        margin-top: 30px;
+        margin-left: 20px;
+        padding: 0px 10px;
+    }
+
+    nav {
+        display: none;
+    }
+    
+    .decore {
+        width: 420px;
+        position: absolute;
+        right: -20px;
+        top: -20px;
+        z-index: -1;
+        /* display: none; */
+    }
+    
+    .hamburger {
+        display: block;
+    }
+    
+    header {
+        height: 30px;
+        width: inherit;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 15px auto 0;
+        position: relative;
+    
+    }
+    
+    .logo {
+        width: 80px;
+        height: 25px;
+        margin-left: 10px;
+    }
+    
+    
+    .hero-section {
+        flex-wrap: wrap;
+        width: 100%;
+        margin: 0 auto;
+        position: static;
+        /* border: 1px solid red; */
+    }
+    
+    .hero-right {
+        background-image: url(./Traveller3.png);
+        width: 100%;
+        height: 760px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        position: static;
+        margin-top: 60px;
+    
+    }
+    
+    .hero-left {
+        width: 100%;
+        text-align: center;
+        padding: 0 40px;
+    }
+    
+    .hero-sm-text {
+        color: #DF6951;
+        font-size: 14px;
+        font-family: "poppins";
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+    
+    .hero-big-text {
+        font-size: 55px;
+        font-weight: 700;
+        color: #181E4B;
+        line-height: 49px;
+        letter-spacing: -0.04em;
+        margin-top: 24px;
+    }
+    
+    .hero-text {
+        font-size: 16px;
+        margin: 30px 0;
+        line-height: 30px;
+        font-weight: normal;
+        color: #5E6282;
+        width: 100%;
+    }
+    
+    .hero-link-btn {
+        /* height: 60px; */
+        width: 170px; 
+        margin: 0 auto;
+        padding: 21px 26px;
+        background-color: #F1A501;
+        box-shadow: 0px 20px 35px rgba(241, 165, 1, 0.15);
+        border-radius: 10px;
+        font-family: 18px;
+        color: white;
+        display: block;
+    }
+    
+    .hero-play-btn {
+        width: 170px; 
+        padding: 21px 26px;
+        border-radius: 10px;
+        background-color: transparent;
+        font-size: 18px;
+        cursor: pointer;
+        /* border: 1px solid red; */
+        margin-left: 0;
+        margin-top: 30px;
+        color: black;
+        display: inline-block;
+    }
+
+    
+.services-section {
+    /* border: 1px solid red; */
+    margin-top: 300px;
+    /* border: 1px solid red; */
+}
+
+.top-selling {
+    margin-top: 100px;
+}
+
+.section-sm-heading {
+    font-size: 15px;
+    text-transform: uppercase;
+    color:#5E6282;
+    text-align: center;
+}
+
+.section-big-heading {
+    font-size: 25px;
+    line-height: 64px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #14183E;
+}
+
+.bottom-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 0;
+    margin-bottom: 33px;
+}
+
+.card {
+    margin-bottom: 15px;
+}
+
+.card-text {
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+}
+
+.gallery {
+   
+    margin-bottom: 20px;
+}
+
+
+.trip {
+    display: block;
+    height: fit-content;
+    width: 100%;
+    margin-top: 100px;
+}
+.left-trip-section {
+    width: 100%;
+    text-align: center;
+    /* border: 1px solid red; */
+}
+
+.right-trip-section {
+    width: 100%;
+    overflow: hidden;
+    /* border: 1px solid red; */
+    align-items: end;
+}
+
+.trip-img {
+    width: 100%;
+    position: relative;
+    bottom: 45px;
+    right: 0px;
+    scale: 1.2;
+}
+
+.triple-section {
+    display: block;
+    /* border: 1px solid red; */
+}
+
+.trip-text {
+    margin: 0 auto;
+}
+
+.trip-sm-heading {
+   margin-bottom: 20px;
+}
+.trip-big-heading {
+    line-height: 25px;
+    font-size: 25px;
+}  
+   
+.testimonial {
+    display: block;
+    margin-top: 0px;
+}
+
+.testimonial-left-trip {
+    margin-top: 0px;
+    margin-bottom: 20px;
+}
+
+.partners {
+    /* margin-top: 50px; */
+    /* border: 1px solid red; */
+    display: inline-block;
+    /* align-items: center;
+    justify-content: center; */
+    padding-left: 120px;
+    margin-top: 0px;
+
+}
+
+.partner-img {
+    margin-right: 0px;
+    display: block;
+    align-items: center;
+    justify-items: center;
+    height: max-content;
+    align-self: center;
+    width: 100px;
+    height: 100px;
+}
+
+.img-31 {
+    margin-top: 50px;
+    width: 100px;
+    height: 20px;
+}
+
+.img-32 {
+    width: 100px;
+    height: 20px;
+}
+
+
+.subscribe {
+    background-color: #DFD7F9;
+    border-radius: 30px;
+    width: 380px;
+    height: 250px;
+    position: relative;
+    left: -25px;
+    z-index: 1;
+    /* border: 1px solid;  */
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+    padding: 10px 45px;
+}
+
+.form-box {
+    display: block;
+    justify-content: left;
+    width: 320px;
+    height: 50px;
+    background-color: white;
+    padding-left: 20px;
+    border-radius: 10px;
+    position:absolute;
+    left: -270px;
+    top: 50px;
+}
+
+.sub-heading {
+    text-align: center;
+    color: #5E6282;
+    font-size: 22px;
+    font-weight: 200;
+    line-height: 20px;
+    padding-top: 25px;
+}
+
+.font_awe {
+    position: absolute;
+    right: -10px;
+    top: -10px;
+    z-index: 10;
+}
+
+
+.input-box {
+    display: flex;
+    width: 290px;
+    height: 50px;
+    align-items: center;
+    /* border: 1px solid black; */
+}
+
+input {
+    width: 290px;
+    font-size: 14px;
+    font-weight: 400;
+    height: 35px;
+    /* border: none; */
+    /* outline: none; */
+    font-size: 17px;
+}
+
+.subscribe-btn {
+    width: 320px;
+    height: 50px;
+    background-color: #FF946D;
+    border: none;
+    font-size: 17px;
+    font-weight: 600;
+    color: white;
+    border-radius: 10px;
+    padding: 0px 20px;
+    margin-left: 50px;
+    margin-top: 10px;
+    position: absolute;
+    left: -50px;
+    cursor: pointer;
+}
+
+.top-footer {
+    width: 370px;
+    height: 900px;
+    display: inline-block;
+    /* border: 1px solid black; */
+    justify-content: center;
+    align-items: center;
+    /* margin-right: 100px;
+    margin-top: 50px; */
+    margin: 50px 10px 20px 25px;
+    position: relative;
+}
+
+.inner-top-footer {
+    /* border: 1px solid red; */
+    height: 200px;
+    width: 120px;
+    margin-right: 70px;
+    display: block;
+    /* justify-content: center;
+    align-content: center; */
+    text-align: center;
+    /* border: 1px solid red; */
+    position: relative;
+    left: 120px;
+    
+}
+
+.inner-top-footer-jadoo {
+    /* border: 1px solid red; */
+    height: 200px;
+    width: 200px;
+    margin-right: 75px;
+    margin-left: 75px;
+    position: absolute;
+    bottom: 80px;
+    left: 10px;
+    text-align: center;
+}
+
+.bottom-footer {
+    width: 380px;
+    text-align: center;
+    padding: 25px 0;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 17.43px;
+    color: #5E6282;
+    margin-left: 20px;
+}
+
+.footer-jadoo {
+    margin-top: 0;
+    margin-bottom: 40px;
+    font-size: 44px;
+    /* line-height: 66px; */
+    font-weight: 500;
+    color: #181E4B;
+}
+
+.footer-h5-p {
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 14px;
+    color: #5E6282;
+    line-height: 22.4px;
+    display: block;
+}
+
+.inner-top-footer-icons {
+    width: 220px;
+    height: 146px;
+    /* border: 1px solid red; */
+    margin-left: 70px;
+    position:absolute;
+    bottom: 0px;
+    left: 10px;
+}
+
+.footer-p-discover {
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 24.9px;
+    color: #5E6282;
+    /* margin-top: 18px; */
+    margin-bottom: 12px;
+    margin-left: 25px;
+}
+
+
+}
