--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ main {
 
 .decore {
     position: absolute;
-    right: -50px;
+    right: -1px;
     top: -47px;
     z-index: -1;
 }
@@ -43,6 +43,7 @@ header {
     justify-content: space-between;
     align-items: center;
     position: relative;
+    padding-right: 50px;
 }
 
 .logo {
@@ -560,10 +561,116 @@ input {
         width: 900px;
         margin: 0 auto;
     }
-
-
 }
 
+/* Responsiveness for Laptop 768px screen devices */
+@media screen  and (max-width: 768px) {
+    .body {
+        margin: 0 10px;
+    }
+
+    header {
+        height: 40px;
+        margin: 47px auto 0;
+        display: flex;
+        align-items: center;
+        position: relative;
+        border: 1px solid red;
+        padding-right: 0px;
+    }
+
+    .nav-item {
+        margin-right: 20px;
+        font-size: 17px;
+    }
+
+    .decore {
+        width: 60%;
+        right: 0;
+        overflow-y: hidden;
+    }
+
+    main {
+        overflow-x: hidden;
+    }
+
+    .hero-section {
+       max-width: 765px;
+       border: 1px solid blue;
+    }
+    
+    .hero-right {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: 10px 50px;
+        width: 483px;
+    }
+    
+    .hero-left {
+        width: 250px;
+        padding-right: 45px;
+        margin-top: opx;
+        border: 1px solid red;
+    }
+    
+    .hero-sm-text {
+        font-size: 14px;
+    }
+    
+    .hero-big-text {
+        font-size: 54px;
+        font-weight: 700;
+        /* line-height: 40px; */
+    }
+    
+    .hero-text {
+        width: 370px;
+    }
+
+    .hero-left {
+        width: 630px;
+        padding-right: 85px;
+    }
+    
+    /* .hero-sm-text {
+        color: #DF6951;
+        font-size: 20px;
+        font-family: "poppins";
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+    
+    .hero-big-text {
+        font-size: 84px;
+        font-weight: 700;
+        color: #181E4B;
+        line-height: 69px;
+        letter-spacing: -0.04em;
+        margin-top: 24px;
+    }
+    
+    .hero-text {
+        font-size: 16px;
+        margin: 30px 0;
+        line-height: 30px;
+        font-weight: 500;
+        color: #5E6282;
+        width: 470px;
+    } */
+
+    .partners {
+        justify-content: center;
+    }
+
+    .partner-img {
+        margin-right: 30px;
+    }
+
+    .subscribe {
+        width: 900px;
+        margin: 0 auto;
+    }
+}
 
 /* Responsiveness for small mobile devices */
 @media screen and (max-width: 425px) {
